Made hero level slider work, fixed label alignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,10 +25,8 @@ html, body {
     align-items: center;
     .basics {
         .portrait {
-            width: 80px;
-            height: 80px;
-            //width: 15px;
-            //height: 15px;
+            width: 80px; height: 80px;
+            //width: 15px; height: 15px;
             margin: 0 auto;
             img {
                 width: 80px;
@@ -44,7 +42,7 @@ html, body {
     }
     .advanced {
         width: 100%;
-        padding: 0 30px 10px;
+        padding: 0 26px 10px;
         box-sizing: border-box;
         .attributes {
             margin-top: 20px;
